--- a/自定义Event事件.html
+++ b/自定义Event事件.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>event</title>
+    <title>event事件</title>
     <style>
         html *{padding: 0;margin: 0;}
     </style>
